--- a/Projekt5/HTML/index.html
+++ b/Projekt5/HTML/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
- <meta charset= "UTF-8"> 
+ <meta charset= "UTF-8">
  <title>Trædrejeren</title>
  <link href="../CSS/projekt5.css" rel="stylesheet" type="text/css">
  <script src="../JS/projekt5.js" defer></script>
- <meta name="viewport" content="width=device-width,initial-scale=1"> <!--Gør så inholdet på siden fylder hele skærmen på enheden -->  
+ <meta name="viewport" content="width=device-width,initial-scale=1"> <!--Gør så inholdet på siden fylder hele skærmen på enheden -->
 </head>
 
 <body>
@@ -24,7 +24,7 @@
 
     <section class="per-banner">
         <h2>Per Froholdt</h2>
-        <h1>Jeg er en fyns trædrejer, med nogle dejlige produkter<br>
+        <h1>Jeg er en fynsk trædrejer, med nogle dejlige produkter<br>
         jeg håber du finder noget i din stil.</h1>
     </section>
 
@@ -34,7 +34,7 @@
         <div class="box-1">
             <h3>Vaser</h3>
         </div>
-        </a>    
+        </a>
 
         <a href="#">
         <div class="box-2">
@@ -46,7 +46,7 @@
         <div class="box-3">
             <h3>Lys</h3>
         </div>
-        </a>    
+        </a>
 
         <a href="#">
         <div class="box-4">
