--- a/Projekt5/HTML/index.html
+++ b/Projekt5/HTML/index.html
@@ -14,9 +14,11 @@
         <a href="projekt5.html" class="header-brand">Trædrejeren</a>
         <nav>
             <ul>
-                <li><a href="#">Produkter</a></li>
+                <li><a href="#">Webshop</a></li>
                 <li><a href="#">Kurser</a></li>
-                <li><a href="#">Omkring Per</a></li>
+                <li><a href="#">Co-create</a></li>
+                <li><a href="#">Om mig</a></li>
+                <li><a href="#">Webshop</a></li>
             </ul>
             <a href="#" class="header-kontakt">Kontakt</a>
         </nav>
