--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -5,6 +5,19 @@
     <title></title>
   </head>
   <body>
+    <header>
+        <a href="projekt5.html" class="header-brand">Trædrejeren</a>
+        <nav>
+            <ul>
+                <li><a href="#">Webshop</a></li>
+                <li><a href="#">Kurser</a></li>
+                <li><a href="#">Co-create</a></li>
+                <li><a href="#">Om mig</a></li>
+                <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+            </ul>
+            <a href="#" class="header-kontakt">Kontakt</a>
+        </nav>
+    </header>
 
 
     <footer>
