--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -29,6 +29,7 @@
           <a href="#">Kurser</a>
           <a href="#">Co-create</a>
           <a href="#">Om mig</a>
+          <a href="#"><i class="fas fa-shopping-cart"></i></a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
@@ -37,7 +38,27 @@
     </header>
 
     <main>
-      
+      <!--her skal indsættes slideshow med de to billeder-->
+      <img class="img" src="../img/bordbillede.png" alt="bord">
+      <h2 style="float:left; margin-right:48vw;">Træbord</h2>
+      <h2>200 kr</h2>
+      <div class="antal">
+        <ul>
+          <li><p>Antal</p></li>
+          <li><i class="fas fa-chevron-down"></i></li>
+        </ul>
+      </div>
+      <div class="tilføj">
+        <p>Tilføj til indkøbskurv</p>
+      </div>
+      <h3>Materiale</h3>
+      <p>bla bla bla</p>
+      <h3>Mål</h3>
+      <p>bla bla bla</p>
+      <h3>Fragt og levering</h3>
+      <p>bla bla bla</p>
+      <h3>Anmeldelser</h3>
+      <p><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i></p>
     </main>
 
     <footer>
