--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -42,8 +42,8 @@
       <img class="img" src="../img/bordbillede.png" alt="bord">
       <h2 style="float:left; margin-right:48vw;">Træbord</h2>
       <h2>200 kr</h2>
-      <div class="antal">
-        <ul>
+      <div>
+        <ul class="antal">
           <li><p>Antal</p></li>
           <li><i class="fas fa-chevron-down"></i></li>
         </ul>
@@ -62,30 +62,23 @@
     </main>
 
     <footer>
-      <div class="container2">
-        <div class="col">
-          <ul>
-            <li class="bold">Kontakt</li>
-            <li>Kundeservice</li>
-            <li>FAQ</li>
-            <li>Job og karriere</li>
-          </ul>
-        </div>
-        <div class="col">
-          <ul>
-            <li class="bold">Betalingsmuligheder</li>
-            <li><i class="fab fa-cc-mastercard icon"></i></li>
-            <li><i class="fab fa-cc-visa icon"></i></li>
-          </ul>
-        </div>
-        <div class="col">
-          <ul>
-            <li class="bold">Følg os</li>
-            <li><i class="fab fa-instagram icon"></i></li>
-            <li><i class="fab fa-facebook-square icon"></i></li>
-          </ul>
-        </div>
-      </div>
+      <p style="font-size: 0.7rem;">BUTIKKEN
+        <br>
+      Min butik ligger helt nede til vandet og du er mere end velkommen til at kigge forbib
+        <br>
+      Vestre Havnevej 23,
+      5400 Bogense
+        <br>
+      FORSENDELSE
+        <br>
+      Pakken fremsende med GLS - Porto er indbefatter i generelle omkostninger.
+        <br>
+      RETURNERINGSPOLITIK
+        <br>
+      Tilbagesendelsse er portofri ved brug af teksten : RETUR TIL AFSENDER.
+        <br>
+      SOCIALE MEDIER
+      </p>
 
       <p id="little">
         Vilkår og betingelser | GDPR og personoplysninger | Cookiepolitik
