--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -10,8 +10,8 @@
     <title></title>
   </head>
   <body>
-    <header>
-        <a href="projekt5.html" class="header-brand"><h1>Den Fynske <br> Trædrejer</h1></a>
+    <header class="container">
+        <a href="index.html" class="header-brand"><h1>Den Fynske <br> Trædrejer</h1></a>
         <nav class="hide-on-mobile">
             <ul>
                 <li><a href="#">Webshop</a></li>
