--- a/Projekt5/HTML/projekt5.html
+++ b/Projekt5/HTML/projekt5.html
@@ -4,8 +4,8 @@
 <head>
  <meta charset= "UTF-8"> 
  <title>Trædrejeren</title>
- <link href="../CSS/projekt5.css" rel="stylesheet" type="text/css">
- <script src="../JS/projekt5.js" defer></script>
+ <link href="/CSS/projekt5.css" rel="stylesheet" type="text/css">
+ <script src="/JS/projekt5.js" defer></script>
  <meta name="viewport" content="width=device-width,initial-scale=1"> <!--Gør så inholdet på siden fylder hele skærmen på enheden -->  
 </head>
 
@@ -48,7 +48,7 @@
         </div>
         </a>    
 
-        <a href="#">
+        <a href="/HTML/produktside.html">
         <div class="box-4">
             <h3>Køkken</h3>
         </div>
@@ -73,20 +73,19 @@
 <footer>
     <div class="social-media"></div>
         <a href="#" class="facebook">
-            <img src="../IMG/facebook-logo.png" width="50px" height="50px">
+            <img src="/IMG/facebook-logo.png" width="50px" height="50px">
         </a>
 
         <a href="#" class="mail">
-            <img src="../IMG/mail-logo.png" width="50px" height="50px">
+            <img src="/IMG/mail-logo.png" width="50px" height="50px">
         </a>
 
         <a href="#" class="youtube">
-            <img src="../IMG/youtube-logo.png" width="50px" height="50px">
+            <img src="/IMG/youtube-logo.png" width="50px" height="50px">
         </a>
     </div>
 
 </footer>
-
 
 
 
