--- a/Projekt5/projekt5.html
+++ b/Projekt5/projekt5.html
@@ -24,8 +24,10 @@
 
     <section class="per-banner">
         <h2>Per Froholdt</h2>
-        <h1>Jeg er en fyns trædrejer, med nogle dejlige produkter<br>
-        jeg håber du finder noget i din stil.</h1>
+        <h1>Køb håndlavet brugskunst, sæt dit eget præg gennem co-create <br>
+            eller lær håndværket selv gennem mine kurser</h1>
+
+            <a href ="#"><button class="kontakt-btn">Kontakt</button> </a>
     </section>
 
 
