--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -10,18 +10,18 @@
     <title></title>
   </head>
   <body>
-    <header class="container">
-        <a href="index.html" class="header-brand"><h1>Den Fynske <br> Trædrejer</h1></a>
-        <nav class="hide-on-mobile">
-            <ul>
-                <li><a href="#">Webshop</a></li>
-                <li><a href="#">Kurser</a></li>
-                <li><a href="#">Co-create</a></li>
-                <li><a href="#">Om mig</a></li>
-                <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
-            </ul>
-            <a href="#" class="header-kontakt">Kontakt</a>
+    <header>
+      <div class="container">
+        <a href="index.html"><h1 class="brand">Den Fynske <br> Trædrejer</h1></a>
+        <nav class="hide-on-mobile nav-com">
+          <a href="#">Webshop</a></li>
+          <a href="#">Kurser</a></li>
+          <a href="#">Co-create</a></li>
+          <a href="#">Om mig</a></li>
+          <a href="#"><i class="fas fa-shopping-cart"></i></a></li>
         </nav>
+      </div>
+    </header>
 
         <!-- dropdown menu til mobilversion -->
         <div class="topnav hide-on-com" id="myTopnav">
@@ -35,11 +35,11 @@
           </a>
         </div>
         <script src="../nav2.js" defer></script>
-    </header>
 
     <main>
       <!--her skal indsættes slideshow med de to billeder-->
       <img class="img" src="../img/bordbillede.png" alt="bord">
+      <img class="hide-on-mobile img" src="../img/bordbillede2.png" alt="bord">
       <h2 style="float:left; margin-right:48vw;">Træbord</h2>
       <h2>200 kr</h2>
       <div>
