--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -37,28 +37,37 @@
         <script src="../nav2.js" defer></script>
 
     <main>
-      <!--her skal indsættes slideshow med de to billeder-->
-      <img class="img" src="../img/bordbillede.png" alt="bord">
-      <img class="hide-on-mobile img" src="../img/bordbillede2.png" alt="bord">
-      <h2 style="float:left; margin-right:48vw;">Træbord</h2>
-      <h2>200 kr</h2>
-      <div>
-        <ul class="antal">
-          <li><p>Antal</p></li>
-          <li><i class="fas fa-chevron-down"></i></li>
-        </ul>
+      <div class="wrapper">
+        <!--her skal indsættes slideshow med de to billeder på mobilversion-->
+        <img class="img bord1" src="../img/bordbillede.png" alt="træbord">
+        <img class="hide-on-mobile img bord2" src="../img/bordbillede2.png" alt="træbord">
+        <div>
+          <ul class="container2">
+            <li><h2 class="træbord">Træbord</h2></li>
+            <li><h2 class="pris">200 kr</h2></li>
+            <li><div>
+                  <ul class="antal">
+                  <li><p>Antal</p></li>
+                  <li><i class="fas fa-chevron-down"></i></li>
+                  </ul>
+                </div>
+            </li>
+            <li><div class="tilføj"><p>Tilføj til indkøbskurv</p></div>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="tilføj">
-        <p>Tilføj til indkøbskurv</p>
+      <div class="info">
+        <h2>Produktinformation</h2>
+        <h3>Materiale</h3>
+        <p>bla bla bla</p>
+        <h3>Mål</h3>
+        <p>bla bla bla</p>
+        <h3>Fragt og levering</h3>
+        <p>bla bla bla</p>
+        <h3>Anmeldelser</h3>
+        <p><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i></p>
       </div>
-      <h3>Materiale</h3>
-      <p>bla bla bla</p>
-      <h3>Mål</h3>
-      <p>bla bla bla</p>
-      <h3>Fragt og levering</h3>
-      <p>bla bla bla</p>
-      <h3>Anmeldelser</h3>
-      <p><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i></p>
     </main>
 
     <footer>
