Tilføjet produkt section

--- a/Projekt5/projekt5.html
+++ b/Projekt5/projekt5.html
@@ -23,15 +23,15 @@
     </header>
 
     <section class="per-banner">
-        <h2>Per Froholdt</h2>
-        <h1>Køb håndlavet brugskunst, sæt dit eget præg gennem co-create <br>
-            eller lær håndværket selv gennem mine kurser</h1>
+        <h1>Per Froholdt</h1>
+        <h2>Køb håndlavet brugskunst, sæt dit eget præg gennem co-create <br>
+            eller lær håndværket selv gennem mine kurser</h2>
 
-            <a href ="#"><button class="kontakt-btn">Kontakt</button> </a>
+            <a href ="#"><button class="banner-btn">SE MERE</button> </a>
     </section>
 
-
-    <section>
+    <!--#region Mobil Menu */ --> 
+    <section class="mobil-menu">
         <a href="#">
         <div class="box-1">
             <h3>Vaser</h3>
@@ -69,6 +69,47 @@
         </a>
 
     </section>
+    <!--#endregion */ --> 
+
+
+    <!--#region Produkt-Menu */ -->
+    <section class="produkt-menu">
+        
+        <div class="produkt1">
+            <img src="IMG/PogLog.png" width="200px" height="200px">
+            <h2>Skærebræt</h2>
+            <h3>Skærebræt med håndtag i eg<br>
+                30x20 cm <br>
+                DKK 150,-</h3>
+            <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a> 
+        </div>
+
+        <div class="produkt2">
+            <img src="IMG/PogLog.png" width="200px" height="200px">
+            <h2>Grydeske</h2>
+            <h3>Grydeske trædrejet i eg<br>
+                20 cm <br>
+                DKK 100,-</h3>
+            <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
+        </div>
+
+        <div class="produkt3">
+            <img src="IMG/PogLog.png" width="200px" height="200px"> 
+            <h2>Skåle</h2>
+            <h3>Skåle i ahorn<br>
+                Højde 8 cm Ø 20 cm <br>
+                DKK 200,-</h3>
+            <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
+        </div>
+        
+    </section>
+
+    <section class="webshop-btn">
+        <a href ="#"><button class="til-webshop-btn">Til Webshop</button> </a>
+    </section>
+
+    <!--#endregion */ -->
+
 
 </body>
 
