rettet over til % frem for pixel nogle steder, og begyndt på den sidste del af forsiden.

--- a/Projekt5/projekt5.html
+++ b/Projekt5/projekt5.html
@@ -72,7 +72,7 @@
     <!--#endregion */ --> 
 
 
-    <!--#region Produkt-Menu */ -->
+    <!--#region Produkt-Menu */ --> 
     <section class="produkt-menu">
         
         <div class="produkt1">
@@ -110,6 +110,46 @@
 
     <!--#endregion */ -->
 
+
+    <!--#region tekst section */ -->
+    <section class="historie-section">
+        <h2>Historien bag håndværket</h2>
+        <h3>Det hele startede tilbage i 1954 i en kælder hos mine forældre i <br>
+            Rødovre. Jeg blev bidt af faget og blev uddannet. Desværre ville <br>
+            tiden vise at vi var rigtig mange trædrejere, men maskinerne havde <br>
+            taget over. <br> <br>
+            
+            Derfor skiftede jeg fag og uddannede mig til lære. Men min passion <br>
+            for trædrejning blev ved at brænde og jeg brugte min fritid på træ-<br>
+            drejning og jeg fik da også solgt lidt. <br>
+             </h3>
+
+    </section>
+
+    <section class="udfordringer-section">
+        <h2>Nye udfordringer </h2>
+        <h3>I 1992 vendte jeg tilbage til faget dog i en ny form. Dette var<br>
+            som partner i et dukketeater - Ærøtearteret PUP ART. Her <br>
+            drejede jeg dukker til teateret. Siden har jeg åbnet mit eget <br>
+            værksted hvor jeg sælger egne håndværk, men samtidig gør <br>
+            brug af min læregerning ved at undervise i trædrejning, hvor <br>
+            jeg har haft 2500 kursister igennem. <br><br>
+
+            Så kom endelig ned og besøg mig i min butik i Bogense hvor <br>
+            jeg også kan imødekomme unikke ønsker til et produkt. <br>
+             </h3>
+
+    </section>
+
+    <section class="kursus-section">
+        <h2>Interesseret i selv at lære faget? </h2> 
+        <h3>Jeg tilbyder både dvd’er og bøger til at lære trædrejning<br>
+            derhjemme, samt kursus i mit værksted i Bogense. <br>
+            Du kan booke tid til kursus her på siden, eller kontakt mig. </h3>
+
+    </section>
+
+    <!--#endregion-->
 
 </body>
 
