--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -1,92 +1,137 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="da">
   <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" type="text/css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/produktside.css">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta charset="utf-8">
-    <title></title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      type="text/css"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/produktside.css" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta charset="utf-8" />
+    <title>Produkt</title>
   </head>
   <body>
     <header>
       <div class="container">
-        <a href="index.html"><h1 class="brand">Den Fynske <br> Trædrejer</h1></a>
+        <a href="index.html"
+          ><h1 class="brand">
+            Den Fynske <br />
+            Trædrejer
+          </h1></a
+        >
         <nav class="hide-on-mobile nav-com">
-          <a href="#">Webshop</a></li>
-          <a href="#">Kurser</a></li>
-          <a href="#">Co-create</a></li>
-          <a href="#">Om mig</a></li>
-          <a href="#"><i class="fas fa-shopping-cart"></i></a></li>
-        </nav>
-      </div>
-    </header>
-
-        <!-- dropdown menu til mobilversion -->
-        <div class="topnav hide-on-com" id="myTopnav">
           <a href="#">Webshop</a>
           <a href="#">Kurser</a>
           <a href="#">Co-create</a>
           <a href="#">Om mig</a>
           <a href="#"><i class="fas fa-shopping-cart"></i></a>
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          </a>
-        </div>
-        <script src="../nav2.js" defer></script>
+        </nav>
+      </div>
+    </header>
+
+    <!-- dropdown menu til mobilversion -->
+    <div class="topnav hide-on-com" id="myTopnav">
+      <a href="#">Webshop</a>
+      <a href="#">Kurser</a>
+      <a href="#">Co-create</a>
+      <a href="#">Om mig</a>
+      <a href="#"><i class="fas fa-shopping-cart"></i></a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+    <script src="../nav2.js" defer></script>
 
     <main>
       <div class="wrapper">
         <!--her skal indsættes slideshow med de to billeder på mobilversion-->
-        <img class="img bord1" src="../img/bordbillede.png" alt="træbord">
-        <img class="hide-on-mobile img bord2" src="../img/bordbillede2.png" alt="træbord">
-        <div>
-          <ul class="container2">
-            <li><h2 class="træbord">Træbord</h2></li>
-            <li><h2 class="pris">200 kr</h2></li>
-            <li><div>
-                  <ul class="antal">
-                  <li><p>Antal</p></li>
-                  <li><i class="fas fa-chevron-down"></i></li>
-                  </ul>
-                </div>
-            </li>
-            <li><div class="tilføj"><p>Tilføj til indkøbskurv</p></div>
-            </li>
-          </ul>
+        <div class="produkt-top">
+          <div class="carousel">
+            <button
+              class="carousel_button carousel_button--left is-hidden"
+            ></button>
+
+            <div class="carousel_track-container">
+              <ul class="carousel_track">
+                <li class="carousel_slide current-slide">
+                  <img
+                    class="carousel_image"
+                    src="../img/bordbillede.png"
+                    alt="træbord"
+                  />
+                </li>
+                <li class="carousel_slide">
+                  <img
+                    class="carousel_image"
+                    src="../img/bordbillede2.png"
+                    alt="træbord"
+                  />
+                </li>
+              </ul>
+            </div>
+            <button class="carousel_button carousel_button--right">
+              <img src="right.svg" alt="" />
+            </button>
+            <div class="carousel_nav">
+              <button class="carousel_indicator current-slide"></button>
+              <button class="carousel_indicator"></button>
+            </div>
+          </div>
+          <div class="produkt-info">
+            <h2 class="træbord">Træbord</h2>
+            <h2 class="pris">200 kr</h2>
+            <select name="antal" id="antal" class="selectdropdown">
+              <option value="" disabled selected>Antal</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+            </select>
+            <button class="addtocart">Tilføj til indkøbskurv</button>
+          </div>
         </div>
-      </div>
-      <div class="info">
-        <h2>Produktinformation</h2>
-        <h3>Materiale</h3>
-        <p>bla bla bla</p>
-        <h3>Mål</h3>
-        <p>bla bla bla</p>
-        <h3>Fragt og levering</h3>
-        <p>bla bla bla</p>
-        <h3>Anmeldelser</h3>
-        <p><i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i> <i class="fas fa-star"></i></p>
+        <div class="info">
+          <h2>Produktinformation</h2>
+          <h3>Materiale</h3>
+          <p>bla bla bla</p>
+          <h3>Mål</h3>
+          <p>bla bla bla</p>
+          <h3>Fragt og levering</h3>
+          <p>bla bla bla</p>
+          <h3>Anmeldelser</h3>
+          <p>
+            <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+          </p>
+        </div>
       </div>
     </main>
 
     <footer>
-      <p style="font-size: 0.7rem;">BUTIKKEN
-        <br>
-      Min butik ligger helt nede til vandet og du er mere end velkommen til at kigge forbib
-        <br>
-      Vestre Havnevej 23,
-      5400 Bogense
-        <br>
-      FORSENDELSE
-        <br>
-      Pakken fremsende med GLS - Porto er indbefatter i generelle omkostninger.
-        <br>
-      RETURNERINGSPOLITIK
-        <br>
-      Tilbagesendelsse er portofri ved brug af teksten : RETUR TIL AFSENDER.
-        <br>
-      SOCIALE MEDIER
+      <p style="font-size: 0.7rem">
+        BUTIKKEN
+        <br />
+        Min butik ligger helt nede til vandet og du er mere end velkommen til at
+        kigge forbib
+        <br />
+        Vestre Havnevej 23, 5400 Bogense
+        <br />
+        FORSENDELSE
+        <br />
+        Pakken fremsende med GLS - Porto er indbefatter i generelle
+        omkostninger.
+        <br />
+        RETURNERINGSPOLITIK
+        <br />
+        Tilbagesendelsse er portofri ved brug af teksten : RETUR TIL AFSENDER.
+        <br />
+        SOCIALE MEDIER
       </p>
 
       <p id="little">
@@ -95,5 +140,6 @@
         Den fynske trædrejer 2021 Alle rettigheder forbeholdt
       </p>
     </footer>
+    <script src="../carousel.js"></script>
   </body>
 </html>
