--- a/Projekt5/projekt5.html
+++ b/Projekt5/projekt5.html
@@ -113,6 +113,7 @@
 
     <!--#region tekst section */ -->
     <section class="historie-section">
+        <div class="historie-tekst">
         <h2>Historien bag håndværket</h2>
         <h3>Det hele startede tilbage i 1954 i en kælder hos mine forældre i <br>
             Rødovre. Jeg blev bidt af faget og blev uddannet. Desværre ville <br>
@@ -123,10 +124,17 @@
             for trædrejning blev ved at brænde og jeg brugte min fritid på træ-<br>
             drejning og jeg fik da også solgt lidt. <br>
              </h3>
+        </div>
+
+        <div class="historie-billede">
+            <img src="IMG/historie.png" width="550px">
+        </div>
 
     </section>
 
     <section class="udfordringer-section">
+        <div class="udfordringer-tekst">
+            
         <h2>Nye udfordringer </h2>
         <h3>I 1992 vendte jeg tilbage til faget dog i en ny form. Dette var<br>
             som partner i et dukketeater - Ærøtearteret PUP ART. Her <br>
@@ -138,6 +146,11 @@
             Så kom endelig ned og besøg mig i min butik i Bogense hvor <br>
             jeg også kan imødekomme unikke ønsker til et produkt. <br>
              </h3>
+            </div>
+
+            <div class="udfordringer-billede">
+                <img src="IMG/udfordringer.png" width="550px">
+            </div>
 
     </section>
 
