færdiggjort tekst elementer og er næsten færdig med footer.

--- a/Projekt5/projekt5.html
+++ b/Projekt5/projekt5.html
@@ -155,10 +155,28 @@
     </section>
 
     <section class="kursus-section">
+        <div class="kursus-tekst">
         <h2>Interesseret i selv at lære faget? </h2> 
         <h3>Jeg tilbyder både dvd’er og bøger til at lære trædrejning<br>
             derhjemme, samt kursus i mit værksted i Bogense. <br>
             Du kan booke tid til kursus her på siden, eller kontakt mig. </h3>
+            <br> <br>
+            <a href ="#"><button class="read-more-btn">Læs Mere</button> </a>
+            <a href ="#"><button class="kontakt-btn">Kontakt</button> </a>
+        
+
+        </div>
+
+
+
+        <div class="kursus-video">
+            <iframe width="560" height="280" src="https://www.youtube.com/embed/_QUm3MBX76I"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+            gyroscope; picture-in-picture" allowfullscreen></iframe>
+        
+
+        </div>
 
     </section>
 
@@ -180,6 +198,39 @@
             <img src="IMG/youtube-logo.png" width="50px" height="50px">
         </a>
     </div>
+
+    <section class="footer1">
+        <h2>BUTIKKEN</h2> 
+        <h3>Min butik ligger helt nede til vandet og <br>
+            du er mere end velkommen til at kigge <br> 
+            forbi <br> <br> 
+
+            Vestre Havnevej 23, <br>
+            5400 Bogense <br> <br> 
+
+            <img src="#" width="30px" height="30px"> <h3>@froholdt.dk</h3> <br> <br> 
+
+            <img src="#" width="30px" height="30px"> <h3>+45 28 74 11 30 </h3>
+        </h3>
+    </section>
+
+    <section class="footer2">
+        <h2>FORSENDELSE</h2>
+        <h3>Pakken fremsende med GLS - Porto er <br>
+            indbefatter i generelle omkostninger. </h3>
+            <br> <br> 
+        <h2>RETUNERINGS POLITIK</h2> 
+        <h3>TIlbagesendelsse er portofri ved brug af <br>
+            teksten :RETUR TIL AFSENDER. </h3>
+    </section>
+
+    <section class="footer3">
+        <h2>SOCIALEMEDIER</h2>
+        <img src="#" width="30px" height="30px"><h3>Denfynsketrædjer/facebook.dk</h3>
+        <img src="#" width="30px" height="30px"><h3>Denfynsketrædjer/instagram</h3>
+    </section>
+
+
 
 </footer>
 
