--- a/Projekt5/HTML/kontakt.html
+++ b/Projekt5/HTML/kontakt.html
@@ -73,7 +73,7 @@
                         <label for="message">Besked</label> <br>
                         <input id="besked" name="besked" type="message" placeholder="Besked">
                     </div>
-                    <button type="submit">Submit</button>
+                    <button type="submit">Send</button>
                 </form>
             </div>
         </div>
