--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -118,7 +118,7 @@
         BUTIKKEN
         <br />
         Min butik ligger helt nede til vandet og du er mere end velkommen til at
-        kigge forbib
+        kigge forbi
         <br />
         Vestre Havnevej 23, 5400 Bogense
         <br />
