færdiggjort hjemmeside til desktop

--- a/Projekt5/projekt5.html
+++ b/Projekt5/projekt5.html
@@ -26,7 +26,7 @@
         <h1>Per Froholdt</h1>
         <h2>Køb håndlavet brugskunst, sæt dit eget præg gennem co-create <br>
             eller lær håndværket selv gennem mine kurser</h2>
-
+            
             <a href ="#"><button class="banner-btn">SE MERE</button> </a>
     </section>
 
@@ -76,7 +76,7 @@
     <section class="produkt-menu">
         
         <div class="produkt1">
-            <img src="IMG/PogLog.png" width="200px" height="200px">
+            <img src="IMG/produkt1.png" width="200px" height="200px">
             <h2>Skærebræt</h2>
             <h3>Skærebræt med håndtag i eg<br>
                 30x20 cm <br>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="produkt2">
-            <img src="IMG/PogLog.png" width="200px" height="200px">
+            <img src="IMG/produkt2.png" width="200px" height="200px">
             <h2>Grydeske</h2>
             <h3>Grydeske trædrejet i eg<br>
                 20 cm <br>
@@ -94,7 +94,7 @@
         </div>
 
         <div class="produkt3">
-            <img src="IMG/PogLog.png" width="200px" height="200px"> 
+            <img src="IMG/produkt3.png" width="200px" height="200px"> 
             <h2>Skåle</h2>
             <h3>Skåle i ahorn<br>
                 Højde 8 cm Ø 20 cm <br>
@@ -208,9 +208,9 @@
             Vestre Havnevej 23, <br>
             5400 Bogense <br> <br> 
 
-            <img src="#" width="30px" height="30px"> <h3>@froholdt.dk</h3> <br> <br> 
+            <img src="IMG/mail.png" width="30px" height="30px"> <h3>Per@froholdt.dk</h3> <br> <br> 
 
-            <img src="#" width="30px" height="30px"> <h3>+45 28 74 11 30 </h3>
+            <img src="IMG/tlf.png" width="30px" height="30px"> <h3>+45 28 74 11 30 </h3>
         </h3>
     </section>
 
@@ -226,8 +226,8 @@
 
     <section class="footer3">
         <h2>SOCIALEMEDIER</h2>
-        <img src="#" width="30px" height="30px"><h3>Denfynsketrædjer/facebook.dk</h3>
-        <img src="#" width="30px" height="30px"><h3>Denfynsketrædjer/instagram</h3>
+        <img src="IMG/facebook.png" width="30px" height="30px"><h3>Denfynsketrædjer/facebook.dk</h3> <br> <br>
+        <img src="IMG/instagram.png" width="30px" height="30px"><h3>Denfynsketrædjer/instagram</h3>
     </section>
 
 
