har rettet i koden
har rettet op i koden så den passer bedre til forskellige størrelse skærme + fikset mobil udgaven, mangler dog stadig lidt arbejde

--- a/Projekt5/projekt5.html
+++ b/Projekt5/projekt5.html
@@ -17,8 +17,9 @@
                 <li><a href="#">Produkter</a></li>
                 <li><a href="#">Kurser</a></li>
                 <li><a href="#">Omkring Per</a></li>
+                <li><a href="#" class="header-kontakt">Kontakt</a> </li>
             </ul>
-            <a href="#" class="header-kontakt">Kontakt</a>
+            
         </nav>
     </header>
 
@@ -185,19 +186,7 @@
 </body>
 
 <footer>
-    <div class="social-media"></div>
-        <a href="#" class="facebook">
-            <img src="IMG/facebook-logo.png" width="50px" height="50px">
-        </a>
 
-        <a href="#" class="mail">
-            <img src="IMG/mail-logo.png" width="50px" height="50px">
-        </a>
-
-        <a href="#" class="youtube">
-            <img src="IMG/youtube-logo.png" width="50px" height="50px">
-        </a>
-    </div>
 
     <section class="footer1">
         <h2>BUTIKKEN</h2> 
@@ -210,7 +199,7 @@
 
             <img src="IMG/mail.png" width="30px" height="30px"> <h3>Per@froholdt.dk</h3> <br> <br> 
 
-            <img src="IMG/tlf.png" width="30px" height="30px"> <h3>+45 28 74 11 30 </h3>
+            <img src="IMG/tlf.png" width="30px" height="30px"> <h3>+45 28 74 11 30 </h3> <br class="br-mobile"> <br class="br-mobile">
         </h3>
     </section>
 
@@ -221,11 +210,11 @@
             <br> <br> 
         <h2>RETUNERINGS POLITIK</h2> 
         <h3>TIlbagesendelsse er portofri ved brug af <br>
-            teksten :RETUR TIL AFSENDER. </h3>
+            teksten :RETUR TIL AFSENDER. </h3> <br class="br-mobile"> <br class="br-mobile">
     </section>
 
     <section class="footer3">
-        <h2>SOCIALEMEDIER</h2>
+        <h2>SOCIALEMEDIER</h2> <br class="br-mobile">
         <img src="IMG/facebook.png" width="30px" height="30px"><h3>Denfynsketrædjer/facebook.dk</h3> <br> <br>
         <img src="IMG/instagram.png" width="30px" height="30px"><h3>Denfynsketrædjer/instagram</h3>
     </section>
