--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -28,13 +28,13 @@
         <nav class="hide-on-mobile nav-com">
           <a href="#">Webshop</a>
           <a href="#">Kurser</a>
-          <a href="#">Co-create</a>
+          <a href="/HTML/kontakt.html">Kontakt</a>
           <a href="#">Om mig</a>
           <a href="#"><i class="fas fa-shopping-cart"></i></a>
         </nav>
       </div>
     </header>
-
+xz
     <!-- dropdown menu til mobilversion -->
     <div class="topnav hide-on-com" id="myTopnav">
       <a href="#">Webshop</a>
