--- a/Projekt5/HTML/kontakt.html
+++ b/Projekt5/HTML/kontakt.html
@@ -16,14 +16,14 @@
 <body>
     <header>
         <div class="container">
-            <a href="index.html">
+            <a href="../projekt5.html">
                 <h1 class="brand">
                     Den Fynske <br />
                     Trædrejer
                 </h1>
             </a>
             <nav class="hide-on-mobile nav-com">
-                <a href="#">Webshop</a>
+                <a href="../HTML/produktside.html">Webshop</a>
                 <a href="#">Kurser</a>
                 <a href="#">Co-create</a>
                 <a href="#">Om mig</a>
