--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="container">
-        <a href="index.html"
+        <a href="../projekt5.html"
           ><h1 class="brand">
             Den Fynske <br />
             Trædrejer
