added javascript pagetransition
added javascript pagetransition

--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -17,6 +17,7 @@
     <title>Produkt</title>
   </head>
   <body>
+    <div class="transition transition-1 is-active"></div> 
     <header>
       <div class="container">
         <a href="../projekt5.html"
