--- a/Projekt5/HTML/kontakt.html
+++ b/Projekt5/HTML/kontakt.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div class="transition transition-1 is-active"></div> 
     <header>
         <div class="container">
             <a href="../projekt5.html">
