--- a/Projekt5/HTML/kontakt.html
+++ b/Projekt5/HTML/kontakt.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8" />
     <title>Kontakt</title>
     <script src="../kontakt.js" defer></script>
+    <script src="../pagetransition.js" defer></script> 
 </head>
 
 <body>
