--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta charset="utf-8" />
     <title>Produkt</title>
+    <script src="../pagetransition.js" defer></script> 
   </head>
   <body>
     <div class="transition transition-1 is-active"></div> 
