--- a/Projekt5/HTML/index.html
+++ b/Projekt5/HTML/index.html
@@ -5,6 +5,7 @@
  <meta charset= "UTF-8">
  <title>Trædrejeren</title>
  <link href="../CSS/projekt5.css" rel="stylesheet" type="text/css">
+ <link href="../css/produktside.css" rel="stylesheet" type="text/css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" type="text/css">
  <script src="../JS/projekt5.js" defer></script>
  <meta name="viewport" content="width=device-width,initial-scale=1"> <!--Gør så inholdet på siden fylder hele skærmen på enheden -->
