--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -4,21 +4,18 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-      type="text/css"
-    />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+      type="text/css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="../css/produktside.css" />
+    <link rel="stylesheet" href="../css/projekt5.css">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta charset="utf-8" />
     <title>Produkt</title>
-    <script src="../pagetransition.js" defer></script> 
+    <script src="../pagetransition.js" defer></script>
   </head>
   <body>
-    <div class="transition transition-1 is-active"></div> 
+    <div class="transition transition-1 is-active"></div>
     <header>
       <div class="container">
         <a href="../projekt5.html"
@@ -36,7 +33,7 @@
         </nav>
       </div>
     </header>
-xz
+
     <!-- dropdown menu til mobilversion -->
     <div class="topnav hide-on-com" id="myTopnav">
       <a href="#">Webshop</a>
@@ -116,31 +113,38 @@ xz
     </main>
 
     <footer>
-      <p style="font-size: 0.7rem">
-        BUTIKKEN
-        <br />
-        Min butik ligger helt nede til vandet og du er mere end velkommen til at
-        kigge forbi
-        <br />
-        Vestre Havnevej 23, 5400 Bogense
-        <br />
-        FORSENDELSE
-        <br />
-        Pakken fremsende med GLS - Porto er indbefatter i generelle
-        omkostninger.
-        <br />
-        RETURNERINGSPOLITIK
-        <br />
-        Tilbagesendelsse er portofri ved brug af teksten : RETUR TIL AFSENDER.
-        <br />
-        SOCIALE MEDIER
-      </p>
+      <div class="footer">
+        <section class="footer1">
+            <h2>BUTIKKEN</h2>
+            <h3>Min butik ligger helt nede til vandet og <br>
+                du er mere end velkommen til at kigge <br>
+                forbi <br> <br>
 
-      <p id="little">
-        Vilkår og betingelser | GDPR og personoplysninger | Cookiepolitik
-        <br />
-        Den fynske trædrejer 2021 Alle rettigheder forbeholdt
-      </p>
+                Vestre Havnevej 23, <br>
+                5400 Bogense <br> <br>
+
+                <img src="../IMG/mail.png" width="30px" height="30px"> <h3>Per@froholdt.dk</h3> <br> <br>
+
+                <img src="../IMG/tlf.png" width="30px" height="30px"> <h3>+45 28 74 11 30 </h3> <br class="br-mobile"> <br class="br-mobile">
+            </h3>
+        </section>
+
+        <section class="footer2">
+            <h2>FORSENDELSE</h2>
+            <h3>Pakken fremsende med GLS - Porto er <br>
+                indbefatter i generelle omkostninger. </h3>
+                <br> <br>
+            <h2>RETUNERINGS POLITIK</h2>
+            <h3>TIlbagesendelsse er portofri ved brug af <br>
+                teksten :RETUR TIL AFSENDER. </h3> <br class="br-mobile"> <br class="br-mobile">
+        </section>
+
+        <section class="footer3">
+            <h2>SOCIALEMEDIER</h2> <br class="br-mobile">
+            <img src="../IMG/facebook.png" width="30px" height="30px"><h3>Denfynsketrædjer/facebook.dk</h3> <br> <br>
+            <img src="../IMG/instagram.png" width="30px" height="30px"><h3>Denfynsketrædjer/instagram</h3>
+        </section>
+      </div>
     </footer>
     <script src="../carousel.js"></script>
   </body>
