--- a/Projekt5/projekt5.html
+++ b/Projekt5/projekt5.html
@@ -23,7 +23,7 @@
           Trædrejer
         </h1></a>
       <nav class="hide-on-mobile nav-com">
-        <a href="#">Webshop</a>
+        <a href="html/produktside.html">Webshop</a>
         <a href="#">Kurser</a>
         <a href="#">Co-create</a>
         <a href="../HTML/kontakt.html">Kontakt</a>
