Færdigjort hele siden
+ JS del til Carousel plus rettet til vores behov.

+rettet padding på siden så det hele burde passe ind

+ændret farve på tekst i produktside.html

--- a/Projekt5/projekt5.html
+++ b/Projekt5/projekt5.html
@@ -145,19 +145,19 @@
 
             <div class="inline">
             <img src="IMG/produkt2.png" width="70%">
-            <h2>Skærebræt</h2>
-            <h3>Skærebræt med håndtag i eg<br>
-                30x20 cm <br>
-                DKK 150,-</h3>
+            <h2>Grydeske</h2>
+            <h3>Grydeske trædrejet i eg<br>
+                20 cm <br>
+                DKK 100,-</h3>
             <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
         </div>
 
             <div class="inline">
             <img src="IMG/produkt3.png" width="70%">
-            <h2>Grydeske</h2>
-            <h3>Grydeske trædrejet i eg<br>
-                20 cm <br>
-                DKK 100,-</h3>
+            <h2>Skåle</h2>
+            <h3>Skåle i ahorn<br>
+                Højde 8 cm Ø 20 cm <br>
+                DKK 200,-</h3>
             <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
         </div>
 
@@ -170,6 +170,7 @@
             <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
         </div>
     </div>
+    </div>
     <!--#endregion-->
 
 
@@ -178,11 +179,7 @@
           <!-- Next and previous buttons -->
 
 
-        <div style="text-align:center">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-          </div>
+
 
 
 
