--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -18,7 +18,7 @@
     <div class="transition transition-1 is-active"></div>
     <header>
       <div class="container">
-        <a href="../projekt5.html"
+        <a href="..//index.html"
           ><h1 class="brand">
             Den Fynske <br />
             Trædrejer
@@ -36,10 +36,10 @@
 
     <!-- dropdown menu til mobilversion -->
     <div class="topnav hide-on-com" id="myTopnav">
-      <a href="#">Webshop</a>
+      <a href="produktside.html">Webshop</a>
       <a href="#">Kurser</a>
       <a href="#">Co-create</a>
-      <a href="#">Om mig</a>
+      <a href="../HTML/kontakt.html">Kontakt</a>
       <a href="#"><i class="fas fa-shopping-cart"></i></a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
