--- a/Projekt5/index.html
+++ b/Projekt5/index.html
@@ -26,7 +26,7 @@
         <a href="html/produktside.html">Webshop</a>
         <a href="#">Kurser</a>
         <a href="#">Co-create</a>
-        <a href="../HTML/kontakt.html">Kontakt</a>
+        <a href="HTML/kontakt.html">Kontakt</a>
         <a href="#"><i class="fas fa-shopping-cart"></i></a>
       </nav>
     </div>
@@ -34,10 +34,10 @@
 
   <!-- dropdown menu til mobilversion -->
   <div class="topnav hide-on-com" id="myTopnav">
-    <a href="#">Webshop</a>
+    <a href="html/produktside.html">Webshop</a>
     <a href="#">Kurser</a>
     <a href="#">Co-create</a>
-    <a href="#">Om mig</a>
+    <a href="HTML/kontakt.html">Kontakt</a>
     <a href="#"><i class="fas fa-shopping-cart"></i></a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
