--- a/Projekt5/index.html
+++ b/Projekt5/index.html
@@ -50,7 +50,7 @@
         <h2>Køb håndlavet brugskunst, sæt dit eget præg gennem co-create <br>
             eller lær håndværket selv gennem mine kurser</h2>
 
-            <a href ="#"><button class="banner-btn">SE MERE</button> </a>
+            <a href ="HTML/produktside.html"><button class="banner-btn">SE MERE</button> </a>
     </section>
 
     <!--#region Mobil Menu */ -->
@@ -113,7 +113,7 @@
             <h3>Skærebræt med håndtag i eg<br>
                 30x20 cm <br>
                 DKK 150,-</h3>
-            <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
+            <a href ="HTML/produktside.html"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
         </div>
 
             <div class="inline">
@@ -122,7 +122,7 @@
             <h3>Grydeske trædrejet i eg<br>
                 20 cm <br>
                 DKK 100,-</h3>
-            <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
+            <a href ="HTML/produktside.html"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
         </div>
 
             <div class="inline">
@@ -131,7 +131,7 @@
             <h3>Skåle i ahorn<br>
                 Højde 8 cm Ø 20 cm <br>
                 DKK 200,-</h3>
-            <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
+            <a href ="HTML/produktside.html"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
         </div>
     </div>
     <!--#endregion-->
@@ -149,7 +149,7 @@
             <h3>Grydeske trædrejet i eg<br>
                 20 cm <br>
                 DKK 100,-</h3>
-            <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
+            <a href ="HTML/produktside.html"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
         </div>
 
             <div class="inline">
@@ -158,7 +158,7 @@
             <h3>Skåle i ahorn<br>
                 Højde 8 cm Ø 20 cm <br>
                 DKK 200,-</h3>
-            <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
+            <a href ="HTML/produktside.html"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
         </div>
 
             <div class="inline">
@@ -167,7 +167,7 @@
             <h3>Skærebræt med håndtag i eg<br>
                 30x20 cm <br>
                 DKK 150,-</h3>
-            <a href ="#"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
+            <a href ="HTML/produktside.html"><button class="produkt-btn">Tilføj til indkøbskurv</button> </a>
         </div>
     </div>
     </div>
@@ -216,7 +216,7 @@
     </section>
 
     <section class="webshop-btn">
-        <a href ="#"><button class="til-webshop-btn">Til Webshop</button> </a>
+        <a href ="HTML/produktside.html"><button class="til-webshop-btn">Til Webshop</button> </a>
     </section>
 
     <!--#endregion */ -->
@@ -273,7 +273,7 @@
             Du kan booke tid til kursus her på siden, eller kontakt mig. </h3>
             <br> <br>
             <a href ="#"><button class="read-more-btn">Læs Mere</button> </a>
-            <a href ="#"><button class="kontakt-btn">Kontakt</button> </a>
+            <a href ="HTML/kontakt.html"><button class="kontakt-btn">Kontakt</button> </a>
 
 
         </div>
