--- a/Projekt5/HTML/produktside.html
+++ b/Projekt5/HTML/produktside.html
@@ -113,7 +113,7 @@
     </main>
 
     <footer>
-      <div class="footer">
+      <div class="footer" style="margin-top: 400px;">
         <section class="footer1">
             <h2>BUTIKKEN</h2>
             <h3>Min butik ligger helt nede til vandet og <br>
