--- a/Projekt5/index.html
+++ b/Projekt5/index.html
@@ -4,8 +4,8 @@
 <head>
  <meta charset= "UTF-8">
  <title>Trædrejeren</title>
- <link href="css/projekt5.css" rel="stylesheet" type="text/css">
- <link href="css/produktside.css" rel="stylesheet" type="text/css">
+ <link href="CSS/projekt5.css" rel="stylesheet" type="text/css">
+ <link href="CSS/produktside.css" rel="stylesheet" type="text/css">
  <link
    rel="stylesheet"
    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -23,7 +23,7 @@
           Trædrejer
         </h1></a>
       <nav class="hide-on-mobile nav-com">
-        <a href="html/produktside.html">Webshop</a>
+        <a href="HTML/produktside.html">Webshop</a>
         <a href="#">Kurser</a>
         <a href="#">Co-create</a>
         <a href="HTML/kontakt.html">Kontakt</a>
@@ -34,7 +34,7 @@
 
   <!-- dropdown menu til mobilversion -->
   <div class="topnav hide-on-com" id="myTopnav">
-    <a href="html/produktside.html">Webshop</a>
+    <a href="HTML/produktside.html">Webshop</a>
     <a href="#">Kurser</a>
     <a href="#">Co-create</a>
     <a href="HTML/kontakt.html">Kontakt</a>
